--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <img class="search-logo" src="../assets/img/Logo.svg">
     </a>
     <form class="search-container">
-      <input class="search-container-input" placeholder="Wykszukaj...">
+      <input class="search-container-input" placeholder="Wyszukaj...">
       <div class="search-container-section">
         <span class="section-text">Wszystkie działy</span>
         <button class="section-button">
@@ -15,23 +15,73 @@
         <img class="search-button-img" src="../assets/img/search-solid.svg">
       </button>
     </form>
-    <a class="header-contact">
-      <img class="header-contact-img" src="../assets/img/envelope-solid.svg">
-      <span>Kontakt</span>
+  </div>
+  <div class="header-panel">
+    <a class="header-panel-account">
+      <img class="header-panel-account-img" src="../assets/img/user-solid.svg">
+      <p class="header-panel-text">Zaloguj się<br>Załóż konto</p>
     </a>
-    <a class="header-account">
-      <img class="header-account-img" src="../assets/img/user-solid.svg">
-      <span>Zaloguj się</span>
+    <a class="header-panel-shopping">
+      <img class="header-panel-shopping-img" src="../assets/img/shopping-cart-solid.svg">
+      <p class="header-panel-text">Twój Kosz</p>
     </a>
-    <a class="header-shopping">
-      <img class="header-shopping-img" src="../assets/img/shopping-cart-solid.svg">
-      <span>Twój Kosz</span>
+    <a class="header-panel-contact">
+      <img class="header-panel-contact-img" src="../assets/img/envelope-solid.svg">
+      <p class="header-panel-text">Kontakt</p>
     </a>
   </div>
-  <nav class="menu">
-
-  </nav>
 </header>
-
+<nav>
+  <ol class="menu">
+    <li>
+      <div class="menu-section">
+        <h4>PS4</h4>
+        <img class="menu-button-img" src="../assets/img/angle-down-solid.svg">
+      </div>
+    </li>
+    <li>
+      <div class="menu-section">
+        <h4>XONE</h4>
+        <img class="menu-button-img" src="../assets/img/angle-down-solid.svg">
+      </div>
+    </li>
+    <li>
+      <div class="menu-section">
+        <h4>PC</h4>
+        <img class="menu-button-img" src="../assets/img/angle-down-solid.svg">
+      </div>
+    </li>
+    <li>
+      <div class="menu-section">
+        <h4>SWITCH</h4>
+        <img class="menu-button-img" src="../assets/img/angle-down-solid.svg">
+      </div>
+    </li>
+    <li>
+      <div class="menu-section">
+        <h4>3DS</h4>
+        <img class="menu-button-img" src="../assets/img/angle-down-solid.svg">
+      </div>
+    </li>
+    <li>
+      <div class="menu-section">
+        <h4>PS3/X360</h4>
+        <img class="menu-button-img" src="../assets/img/angle-down-solid.svg">
+      </div>
+    </li>
+    <li>
+      <div class="menu-section">
+        <h4>WIIU/WII/DS</h4>
+        <img class="menu-button-img" src="../assets/img/angle-down-solid.svg">
+      </div>
+    </li>
+    <li>
+      <div class="menu-section">
+        <h4>UŻYWANE</h4>
+        <img class="menu-button-img" src="../assets/img/angle-down-solid.svg">
+      </div>
+    </li>
+  </ol>
+</nav>
 
 <router-outlet></router-outlet>
