--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,13 @@
 .header-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
     padding: 1em 2em;
+    box-shadow: 0px 1px 5px black;
 }
 
-.header-container-search {
+.header-container-search, .header-panel {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -35,18 +40,20 @@
 }
 
 .search-container-section {
+    cursor: pointer;
     display: flex;
     flex-direction: row;
     align-items: center;
     margin: 0 1em;
-    padding: 0.25em 0;
 }
 
 .section-text {
-    margin-right: 1em;
+    width: 8em;
+    margin-right: .25em;
 }
 
 .section-button {
+    cursor: pointer;
     width: 2em;
     height: 2em;
     background: none;
@@ -59,6 +66,7 @@
 }
 
 .search-button {
+    cursor: pointer;
     width: 3em;
     height: 3em;
     background-color: navy;
@@ -70,13 +78,46 @@
     height: 50%;
 }
 
-.header-contact, .header-account, .header-shopping {
+.header-panel-contact, .header-panel-account, .header-panel-shopping {
+    cursor: pointer;
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin: 0 1em;
 }
-.header-contact-img, .header-account-img, .header-shopping-img {
-    width: 10%;
-    height: 10%;
+
+.header-panel-contact-img, .header-panel-account-img, .header-panel-shopping-img {
+    width: 1.5em;
+    height: 1.5em;
     margin-right: 0.25em;
+}
+
+.header-panel-text:hover {
+    text-decoration: black underline;
+    color: darkslategrey;
+}
+
+.menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    list-style-type: none;
+}
+
+.menu-section {
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 1em 0;
+}
+
+.menu-button-img {
+    width: 2em;
+    height: 2em;
+}
+
+.menu-section:hover {
+    color: brown;
+    text-decoration: underline brown;
 }
