--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -122,10 +122,6 @@
 }
 
 .footer {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
     padding: 0 5em;
     box-shadow: 0px 1px 5px black;
 }
@@ -165,11 +161,14 @@
     margin: 1em;
 }
 
+.footer-info-social-icon:hover {
+    color:#c3a343;
+}
+
 .footer-container {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-    margin: 1em;
 }
 
 .footer-contact-component, .footer-info-social-icons {
